--- a/Web/overview.html
+++ b/Web/overview.html
@@ -35,6 +35,10 @@
 								<ul>
 									<li>code notes database</li>
 								</ul>
+								<li><code>[gameid]-User.txt</code></li>
+								<ul>
+									<li>local, unpublished achievements, leaderboards, and code notes</li>
+								</ul>
 							</ul>
 							<li>Drag any/all files to this window</li>
 						</ol>
