--- a/Web/overview.html
+++ b/Web/overview.html
@@ -51,5 +51,6 @@
 		<script src="js/achievements.js"></script>
 		<script src="js/feedback.js"></script>
 		<script src="js/overview.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js" integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	</body>
 </html>
