AutoCR: add warning note to initial page

--- a/Web/overview.html
+++ b/Web/overview.html
@@ -42,6 +42,7 @@
 							</ul>
 							<li>Drag any/all files to this window</li>
 						</ol>
+						<p><strong>Important note:</strong> All feedback is automated, and therefore imperfect. It is <em>not</em> advised to blindly make every change recommended, but rather to consider the nature of the feedback and determine for yourself whether a change might be appropriate.</p>
 					</div>
 				</div>
 			</div>
