AutoCR: add rich presence support

--- a/Web/overview.html
+++ b/Web/overview.html
@@ -39,6 +39,10 @@
 								<ul>
 									<li>local, unpublished achievements, leaderboards, and code notes</li>
 								</ul>
+								<li><code>[gameid]-Rich.txt</code></li>
+								<ul>
+									<li>local or cached copy of rich presence script</li>
+								</ul>
 							</ul>
 							<li>Drag any/all files to this window</li>
 						</ol>
