--- a/Web/overview.html
+++ b/Web/overview.html
@@ -46,7 +46,8 @@
 							</ul>
 							<li>Drag any/all files to this window</li>
 						</ol>
-						<p><strong>Important note:</strong> All feedback is automated, and therefore imperfect. It is <em>not</em> advised to blindly make every change recommended, but rather to consider the nature of the feedback and determine for yourself whether a change might be appropriate.</p>
+						<p><strong>Important note #1:</strong> This tool is not a validator. If you submit a broken set, it might not parse correctly.</p>
+						<p><strong>Important note #2:</strong> All feedback is automated, and therefore imperfect. It is <em>not</em> advised to blindly make every change recommended, but rather to consider the nature of the feedback and determine for yourself whether a change might be appropriate.</p>
 					</div>
 				</div>
 			</div>
