AutoCR: huge React rewrite

--- a/AutoCR/index.html
+++ b/AutoCR/index.html
@@ -5,6 +5,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>AutoCR</title>
 		<link rel="stylesheet" href="css/overview.css">
+
+		<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+		<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+		<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 	</head>
 	<body>
 		<div id="container">
@@ -55,8 +59,8 @@
 
 		<script src="js/logic.js"></script>
 		<script src="js/achievements.js"></script>
-		<script src="js/feedback.js"></script>
-		<script src="js/overview.js"></script>
+		<script src="js/feedback.js" type="text/babel"></script>
+		<script src="js/overview.js" type="text/babel"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js" integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	</body>
 </html>
